fix(management): buttons alignment + select search input when opening it

--- a/src/app/features/credential-management/credential-management.component.scss
+++ b/src/app/features/credential-management/credential-management.component.scss
@@ -62,14 +62,12 @@
   .credential-management-container {
     display: flex;
     flex-direction: column;
+    align-items: stretch;
     height: 100vh;
-    margin: 24px;
+    width: 75%;
+    margin: auto;
+    margin-block: 24px;
     border-radius: 5px;
-    align-items: center;
-
-    .table-frame, .title-container{
-      width: 75%;
-    }
 
     .title-container {
       display: flex;
@@ -204,9 +202,6 @@
 }
 
 @media(width < 768px){
-  .title-container, .table-frame{
-    width: 80%;
-  }
   .mat-column-updated{
     min-width: 130px;
   }
